# verdantserver

./: Cargo.toml  README.md  flake.nix  package-lock.json  package.json  vite.config.js
config/: livekit.json  loader.json  verdant.pem
js/: index.html  index.js
migrations/: 20251020003448_user.sql
migrations/snapshot/: 0_empty.sql.bak
scripts/: generate.sh  setup_ormlite.sh
src/: backend.rs  main.rs  rpc.rs
static/: index.html  livekit-setup.mjs  livekit-setup.mjs.map  livekit-setup.umd.js  livekit-setup.umd.js.map
static/.vite/: manifest.json
static/assets/: index-DP3uGhR0.js  index-DP3uGhR0.js.map
templates/: livekit.tera  login.tera
templates/components/: head.tera
