[package]
name = "verdanthaven"
version = "0.1.0"
edition = "2024"

[dependencies]
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
livekit = "0.7.21"
livekit-api = "0.4.8"
ormlite = { version = "0.24.1", features = ["sqlite", "uuid"] }
reqwest = "0.12.24"
rocket = { version = "0.5.1", features = ["json"] }
rocket-oidc = "0.1.3"
rocket_dyn_templates = "0.2.0"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
